// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchItem should render search details with link to results page  1`] = `
<div
  className="semantic-search-list-item"
>
  <div
    className="item-header"
  >
    <Connect(I18NLink)
      to="semanticsearch/id"
    >
      query
    </Connect(I18NLink)>
    <Component
      className="text-primary"
      icon="check-circle"
    />
  </div>
  <div
    className="item-footer"
  >
    <button
      className="btn btn-danger delete-search"
      onClick={[Function]}
    >
      <Component
        icon="trash-alt"
      />
    </button>
    <button
      className="btn btn-success"
    >
      <Component
        icon="paper-plane"
      />
    </button>
  </div>
</div>
`;

exports[`SearchItem when search status is inProgress should render in-progress icon, progress bar and stop button 1`] = `
<div
  className="semantic-search-list-item"
>
  <div
    className="item-header"
  >
    <Connect(I18NLink)
      to="semanticsearch/id"
    >
      query
    </Connect(I18NLink)>
  </div>
  <ProgressBar
    max={0}
    value={0}
  />
  <div
    className="item-footer"
  >
    <button
      className="btn btn-danger delete-search"
      onClick={[Function]}
    >
      <Component
        icon="trash-alt"
      />
    </button>
    <button
      className="btn btn-warning stop-search"
      onClick={[Function]}
    >
      <Component
        icon="stop"
      />
    </button>
    <button
      className="btn btn-success"
    >
      <Component
        icon="paper-plane"
      />
    </button>
  </div>
</div>
`;

exports[`SearchItem when search status is stopped should render progress bar and resume button 1`] = `
<div
  className="semantic-search-list-item"
>
  <div
    className="item-header"
  >
    <Connect(I18NLink)
      to="semanticsearch/id"
    >
      query
    </Connect(I18NLink)>
  </div>
  <ProgressBar
    max={0}
    value={0}
  />
  <div
    className="item-footer"
  >
    <button
      className="btn btn-danger delete-search"
      onClick={[Function]}
    >
      <Component
        icon="trash-alt"
      />
    </button>
    <button
      className="btn btn-success resume-search"
      onClick={[Function]}
    >
      <Component
        icon="play"
      />
    </button>
    <button
      className="btn btn-success"
    >
      <Component
        icon="paper-plane"
      />
    </button>
  </div>
</div>
`;
